--- a/fetusapp/templates/chat.html
+++ b/fetusapp/templates/chat.html
@@ -22,11 +22,11 @@
             type="text"
             id="user-input"
             class="form-control"
-            style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;"
+            style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ; font-size: 16px;"
             placeholder="Γράψτε την ερώτησή σας..."
             autocomplete="off"
           >
-          <button class="btn btn-outline-secondary" id="send-btn" type="button">
+          <button class="btn btn-outline-secondary" id="send-btn" type="button" style="font-size: 16px;">
             Αποστολή
           </button>
         </div>
