stylistic changes to the chat

--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -3,9 +3,9 @@
     /* Define color variables */
     --calming-blue: #297FB9;          /* Primary button color */
     --vibrant-pink: #EF539E;
-    /* --vibrant-pink: #ff4f40;
+    --vibrant-pink: #ff4f40;
     --vibrant-pink: #9FE870;
-    --vibrant-pink: #6c7e95; */
+    --vibrant-pink: #6c7e95;
     background-color: #212529;
 }
 
