--- a/fetusapp/templates/chat.html
+++ b/fetusapp/templates/chat.html
@@ -7,7 +7,7 @@
   <div id="chat-container" class="text-light">
     <div id="chat-wrapper">
       <!-- Chat messages container -->
-      <div id="chat-messages" class="p-3">
+      <div id="chat-messages">
 
       </div>
 
