--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -82,6 +82,10 @@
                                                 <form method="POST" id="gynHistoryForm_New">
                                                     {{ history_gyn_form.hidden_tag() }}
                                                     <input type="hidden" name="id" value="">
+                                                    <div class="form-check form-switch d-flex justify-content-end">
+                                                        <input class="form-check-input" type="checkbox" id="agenticSwitch" name="agentic_updates" value="on">
+                                                        <label class="form-check-label ms-2" for="agenticSwitch">Agentic</label>
+                                                    </div>
                                                     <div class="col-12">
                                                         <div class="row py-2">
                                                             <div class="compact-form">
@@ -158,7 +162,9 @@
                                                                                     <span class="visually-hidden">Next</span>
                                                                                 </button>
                                                                             </div>
+                                                                            <p class="text-muted pt-1">Επανεξέταση: {{ patient.next_suggested_appointment }}</p>
                                                                         </div>
+
                                                                         <div class="row zd pt-4">
                                                                             <div class="col-12">
                                                                                 {% set field = getattr(entry_form.form, 'comments', None) %}
@@ -201,6 +207,10 @@
                                                                             <form method="POST" id="pregnancyHistoryForm{{ prefix }}" data-history-id="{{ pregnancy_history_form.id.data if pregnancy_history_form else '' }}">
                                                                                 {{ history_gyn_form.hidden_tag() }}
                                                                                 <input type="hidden" name="id" value="{{ entry_form.form.id.data }}">
+                                                                                <div class="form-check form-switch d-flex justify-content-end">
+                                                                                    <input class="form-check-input" type="checkbox" id="agenticSwitch" name="agentic_updates" value="on">
+                                                                                    <label class="form-check-label ms-2" for="agenticSwitch">Agentic</label>
+                                                                                </div>
                                                                                 <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                                                                                     <button type="button" class="btn login-btn px-4" onclick="saveChangesGynHistory(this)">
                                                                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
