update the date to appear only if populated

--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -162,7 +162,9 @@
                                                                                     <span class="visually-hidden">Next</span>
                                                                                 </button>
                                                                             </div>
+                                                                            {% if patient.next_suggested_appointment %}
                                                                             <p class="text-muted pt-1">Επανεξέταση: {{ patient.next_suggested_appointment }}</p>
+                                                                            {% endif %}
                                                                         </div>
 
                                                                         <div class="row zd pt-4">
