--- a/fetusapp/static/history_gyn.css
+++ b/fetusapp/static/history_gyn.css
@@ -9,3 +9,27 @@
         -webkit-overflow-scrolling: touch;
     }
 }
+
+
+/* Unchecked focus state - dot on the left */
+.form-switch .form-check-input:focus {
+    border-color: var(--vibrant-pink);
+    background-color: white;
+    background-image: radial-gradient(circle, var(--vibrant-pink) 50%, transparent 50%);
+    background-size: 1rem 1rem;
+    background-position: left center;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 0 .25rem oklch(from var(--vibrant-pink) l calc(c - 0.1) h / 0.25);
+}
+
+/* Checked focus state - dot on the right */
+.form-switch .form-check-input:checked:focus {
+    background-position: right center;
+    background-color: var(--vibrant-pink);
+    border-color: var(--vibrant-pink);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='white'/%3e%3c/svg%3e");
+    box-shadow: 0 0 0 .25rem oklch(from var(--vibrant-pink) l calc(c - 0.1) h / 0.25);
+}
+
+
+
