--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -127,7 +127,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                                     <input type="hidden" name="id" value="">
                                                     <div class="form-check form-switch d-flex justify-content-end">
                                                         <input class="form-check-input" type="checkbox" id="agenticSwitch" name="agentic_updates" value="on" checked>
-                                                        <label class="form-check-label ms-2" for="agenticSwitch">Agentic</label>
+                                                        <label class="form-check-label ms-2" for="agenticSwitch">agentic</label>
                                                     </div>
                                                     <div class="col-12">
                                                         <div class="row py-2">
@@ -254,7 +254,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                                                                 <input type="hidden" name="id" value="{{ entry_form.form.id.data }}">
                                                                                 <div class="form-check form-switch d-flex justify-content-end">
                                                                                     <input class="form-check-input" type="checkbox" id="agenticSwitch" name="agentic_updates" value="on" checked>
-                                                                                    <label class="form-check-label ms-2" for="agenticSwitch">Agentic</label>
+                                                                                    <label class="form-check-label ms-2" for="agenticSwitch">agentic</label>
                                                                                 </div>
                                                                                 <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
                                                                                     <button type="button" class="btn login-btn px-4" onclick="saveChangesGynHistory(this)">
