--- a/fetusapp/templates/update_password.html
+++ b/fetusapp/templates/update_password.html
@@ -3,106 +3,87 @@
 {% block page_title %} Διαχείριση χρήστη {% endblock %}
 
 {% block content %}
-
-    <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="container mt-5" style="width: 80%;">
-
-            <div class="d-flex align-items-start">
-                <form method="post" class="mt-4" id="updateForm">
+<main class="flex-shrink-0 m-auto flex-grow-1">
+    <div class="container zd text-light py-5" style="text-align: center;">
+        <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
+            <div class="tab-pane show active rounded-4 m-2 form-wrapper patient-lite p-3 py-5" id="pills-update" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+                <h2 class="text-center">Αλλαγή Κωδικού Χρήστη</h2>
+                <form method="post" class="mt-4 px-3" id="updateForm">
                     {{updateform.hidden_tag()}}
-
-                    {{ updateform.username(class="form-control", id="username", type="text", value = current_user.username, hidden = True)}}
-
-
-                    <div class="row">
-                        <div class="col mb-3">
-                            {{ updateform.old_password(class="form-control", id="old_password", aria_describedby="passwordHelp", type="password", placeholder="Type your old password") }}
-                        </div>
-
+                    {{ updateform.username(class="", id="username", type="text", value=current_user.username, hidden=True) }}
+                    <div class="input-group mb-3">
+                        {{ updateform.old_password(class="", id="old_password", aria_describedby="passwordHelp", type="password", placeholder=" ") }}
+                        <label for="old_password">Παλαιός Κωδικός</label>
                     </div>
-
-                    <!-- Update the password for the selected user -->
-                    <div class="row">
-                        <div class="col-lg-6 col-12 mb-3">
-                            {{ updateform.password(class="form-control", id="password", aria_describedby="passwordHelp", type="password", placeholder="Type your new password") }}
-                        </div>
-
-                        <div class="col-lg-6 col-12 mb-3">
-                            {{ updateform.pass_confirm(class="form-control", id="pass_confirm", type="password", placeholder="Re-enter password") }}
-                        </div>
-                    </div>
-
-                    <div class="row mb-3">
-                        <div class="col">
+                    <div class="row mb-3 ">
+                        <div class="col-lg-6 col-12">
+                            <div class="input-group mb-3">
+                                {{ updateform.password(class="", id="password", aria_describedby="passwordHelp", type="password", placeholder=" ") }}
+                                <label for="password">Νέος Κωδικός</label>
+                            </div>
                             {% if updateform.password.errors %}
                             <div class="errors">
-                            {% for error in updateform.password.errors %}
-                                <small class="text-muted">{{error}}</small>
-                            {% endfor %}
-                            </div>
-                            {% endif %}
-
-                            {% if messages %}
-                            <div class="errors">
-                                {% for message in messages %}
-                                    <small class="text-muted">{{message}}</small>
+                                {% for error in updateform.password.errors %}
+                                <small id="passwordHelp" class="form-text text-warning">{{error}}</small>
                                 {% endfor %}
                             </div>
                             {% endif %}
                         </div>
+                        <div class="col-lg-6 col-12">
+                            <div class="input-group mb-3">
+                                {{ updateform.pass_confirm(id="pass_confirm", type="password", placeholder=" ") }}
+                                <label for="pass_confirm">Επαναλάβετε Κωδικό</label>
+                            </div>
+                        </div>
                     </div>
-
-
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" id = "updateUserButton">Update Password</button>
-
+                    {% if updateform.password.errors or messages %}
+                    <div class="mb-3">
+                        {% if updateform.password.errors %}
+                        <div class="errors">
+                            {% for error in updateform.password.errors %}
+                            <small class="text-warning">{{error}}</small>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                        {% if messages %}
+                        <div class="errors">
+                            {% for message in messages %}
+                            <small class="text-warning">{{message}}</small>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="col text-center">
+                            <button type="button" class="btn login-btn px-5" data-bs-toggle="modal" data-bs-target="#updateModal" id="updateUserButton">
+                            Αλλαγή Κωδικού
+                            </button>
+                        </div>
+                    </div>
                     <!-- Modal -->
                     <div class="modal fade" id="updateModal" tabindex="-1" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-body" id="modalBodyUpdate">Are you sure you want to update the password for <em>{{current_user.username}}</em>?</div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" name="action" value="update" class="btn btn-primary">Update</button>
+                            <div class="modal-content bg-dark">
+                                <div class="modal-body text-center" id="modalBodyUpdate">
+                                    Are you sure you want to update the password for <em>{{current_user.username}}</em>?
+                                </div>
+                                <div class="modal-footer justify-content-center">
+                                    <button type="button" class="btn btn-secondary px-5" data-bs-dismiss="modal">
+                                        Cancel
+                                    </button>
+                                    <button type="submit" name="action" value="update" class="btn login-btn px-5">
+                                        Update
+                                    </button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
-
-
-
-
-
         </div>
     </div>
+</main>
 {% endblock %}
 {% block javascript %}
-
-<script>
-
-    // Function to check if the delete user input matches any of the datalist options
-    document.addEventListener('DOMContentLoaded', function () {
-        var userInput = document.getElementById('userlist');
-        var deleteButton = document.getElementById('deleteUserButton');
-
-        // Function to check if the input matches any of the datalist options
-        function validateInput() {
-            var isValid = false;
-            var options = document.querySelectorAll('#datalistOptions option');
-            for (var i = 0; i < options.length; i++) {
-                if (userInput.value === options[i].value) {
-                    isValid = true;
-                    break;
-                }
-            }
-            deleteButton.disabled = !isValid;
-        }
-
-        // Attach event listener to the user input field
-        userInput.addEventListener('input', validateInput);
-    });
-</script>
-
 {% endblock %}
