--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %} {% block page_title %} Διαχείριση χρήστη {% endblock
 %} {% block content %}
 
-<main class="flex-shrink-0 m-auto flex-grow-1 bg-light">
+<main class="flex-shrink-0 m-auto flex-grow-1">
   <div class="container zd text-light py-5" style="text-align: center;">
-    <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
+    <ul class="nav nav-pills mb-3 bg-dark p-2 secondary-nav-container" id="pills-tab" role="tablist">
         <li class="nav-item"  role="presentation">
           <button class="nav-link {% if active_pill == 'register' %}active{% endif %}" style="border-radius: 5rem;" id="pills-register-tab" data-bs-toggle="pill" data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register" aria-selected="true" onclick="switchTab()">Register User</button>
         </li>
@@ -42,7 +42,7 @@
 
                 <div class="input-group">
                   {{ form.password(id="password",aria_describedby="passwordHelp", type="password", placeholder=" ") }}
-                  <label for="password">Password</label>
+                  <label for="password">Κωδικός</label>
                 </div>
 
                 {% if form.password.errors %}
@@ -56,7 +56,7 @@
               <div class="col-lg-6 col-12">
                 <div class="input-group">
                   {{ form.pass_confirm(id="pass_confirm", type="password", placeholder=" ") }}
-                  <label for="password">Re-enter password</label>
+                  <label for="password">Επαναλάβετε Κωδικό</label>
                 </div>
               </div>
             </div>
@@ -75,9 +75,9 @@
               </div>
             </div>
             <div class="row mb-3 ">
-              <div class="form-check col mx-3">
-                {{ form.is_admin(class="form-check-input", id="is_admin",type="checkbox") }}
-                {{ form.is_admin.label(class="form-label") }}
+              <div class="form-check form-switch d-flex justify-content-end">
+                <input class="form-check-input" type="checkbox" id="is_admin" name="is_admin" value="on">
+                <label class="form-check-label ms-2" for="is_admin">admin</label>
               </div>
               {% with messages = get_flashed_messages() %}
                 {% if messages%}
@@ -91,7 +91,7 @@
             </div>
             <div class="row">
               <div class="col text-center">
-                <button type="submit" name="action" value="register" class="btn login-btn px-5">Register</button>
+                <button type="submit" name="action" value="register" class="btn login-btn px-5">Δημιουργία Χρήστη</button>
               </div>
             </div>
           </form>
@@ -105,24 +105,33 @@
             {{updateform.hidden_tag()}}
             <div class="form-group mb-3">
 
-              {{ updateform.username(class="form-control", list="datalistOptions", id="updateUserlist", autocomplete="off", placeholder="Type to search user...", onclick="this.value='';") }}
-              <datalist id="datalistOptions">
-                <option value="dummy"></option>
-                {%for user in users%}
-                <option value="{{user.username}}">{% endfor %}</option>
-              </datalist>
+              <div class="input-group">
+                <select id="updateUserlist" name="username" class="" >
+                  <option value="" disabled selected>Επιλέξτε χρήστη...</option>
+                  {% for user in users %}
+                    <option value="{{ user.username }}">{{ user.username }}</option>
+                  {% endfor %}
+                </select>
+                <label for="updateUserlist">Username</label>
+              </div>
             </div>
 
             <div class="row">
               <div class="col mb-3">
-                {{ updateform.old_password(class="form-control", id="old_password", aria_describedby="passwordHelp", type="password", placeholder="Type your old password") }}
+                <div class="input-group">
+                  {{ updateform.old_password(class="", id="old_password", aria_describedby="passwordHelp", type="password", placeholder=" ") }}
+                  <label for="old_password">Παλαιός Κωδικός</label>
+                </div>
               </div>
             </div>
 
             <!-- Update the password for the selected user -->
             <div class="row">
               <div class="col-lg-6 col-12 mb-3">
-                {{ updateform.password(class="form-control", id="password", aria_describedby="passwordHelp", type="password", placeholder="Type your new password") }}
+                <div class="input-group">
+                  {{ updateform.password(class="", id="password", aria_describedby="passwordHelp", type="password", placeholder=" ") }}
+                  <label for="password">Νέος Κωδικός</label>
+                </div>
                 {% if updateform.password.errors %}
                 <div class="errors">
                   {% for error in updateform.password.errors %}
@@ -132,7 +141,10 @@
                 {% endif %}
               </div>
               <div class="col-lg-6 col-12 mb-3">
-                {{ updateform.pass_confirm(class="form-control", id="pass_confirm", type="password", placeholder="Re-enter password") }}
+                <div class="input-group">
+                  {{ updateform.pass_confirm(id="pass_confirm", type="password", placeholder=" ") }}
+                  <label for="pass_confirm">Επαναλάβετε Κωδικό</label>
+                </div>
               </div>
             </div>
 
@@ -157,9 +169,9 @@
 
             <!-- Button trigger modal -->
             <div class="row">
-              <div class="col">
+              <div class="col text-center">
                 <button type="button" class="btn login-btn px-5" data-bs-toggle="modal" data-bs-target="#updateModal" id="updateUserButton" disabled>
-                  Update Password
+                  Αλλαγή Κωδικού
                 </button>
               </div>
             </div>
@@ -193,18 +205,15 @@
             <h2 class="text-center">Διαγραφή Χρήστη</h2>
             <div class="form-group mb-3">
 
-              <div class="input-group">
-                  {{ deleteform.username( list="datalistOptions", id="userlist", autocomplete="off",  onclick="this.value='';", placeholder=" ") }}
-                  <label for="username">Username</label>
-
-
-
-                <datalist id="datalistOptions">
-                  <option value="dummy"></option>
-                  {%for user in users%}
-                  <option value="{{user.username}}">{% endfor %}</option>
-                </datalist>
-              </div>
+                <div class="input-group">
+                  <select id="userlist" name="username" class="">
+                    <option value="" disabled selected>Επιλέξτε χρήστη...</option>
+                    {% for user in users %}
+                      <option value="{{ user.username }}">{{ user.username }}</option>
+                    {% endfor %}
+                  </select>
+                  <label for="userlist">Username</label>
+                </div>
             </div>
             <div class="row mb-3">
               {% with messages = get_flashed_messages() %} {% if messages
@@ -220,7 +229,7 @@
             <div class="row">
               <div class="col text-center">
                 <button type="button" class="btn login-btn px-5" data-bs-toggle="modal" data-bs-target="#exampleModal2" id="deleteUserButton" disabled>
-                  Delete User
+                  Διαγραφή Χρήστη
                 </button>
               </div>
             </div>
@@ -255,48 +264,26 @@
 {% block javascript %}
 
 <script>
-  // Function to check if the update user input matches any of the datalist options
+  // Enable update button when a valid user is selected from dropdown
   document.addEventListener("DOMContentLoaded", function () {
     var userInput = document.getElementById("updateUserlist");
     var updateButton = document.getElementById("updateUserButton");
-
-    // Function to check if the input matches any of the datalist options
-    function validateInput() {
-      var isValid = false;
-      var options = document.querySelectorAll("#datalistOptions option");
-      for (var i = 0; i < options.length; i++) {
-        if (userInput.value === options[i].value) {
-          isValid = true;
-          break;
-        }
-      }
-      updateButton.disabled = !isValid;
+    function validateSelect() {
+      updateButton.disabled = !userInput.value;
     }
-
-    // Attach event listener to the user input field
-    userInput.addEventListener("input", validateInput);
+    userInput.addEventListener("change", validateSelect);
+    validateSelect(); // Initial state
   });
 
-  // Function to check if the delete user input matches any of the datalist options
+  // Enable delete button when a valid user is selected from dropdown
   document.addEventListener("DOMContentLoaded", function () {
     var userInput = document.getElementById("userlist");
     var deleteButton = document.getElementById("deleteUserButton");
-
-    // Function to check if the input matches any of the datalist options
-    function validateInput() {
-      var isValid = false;
-      var options = document.querySelectorAll("#datalistOptions option");
-      for (var i = 0; i < options.length; i++) {
-        if (userInput.value === options[i].value) {
-          isValid = true;
-          break;
-        }
-      }
-      deleteButton.disabled = !isValid;
+    function validateSelect() {
+      deleteButton.disabled = !userInput.value;
     }
-
-    // Attach event listener to the user input field
-    userInput.addEventListener("input", validateInput);
+    userInput.addEventListener("change", validateSelect);
+    validateSelect(); // Initial state
   });
 
   // Attach the function to the modal trigger button
